# rust-stm32f030r8-tests

./: Cargo.toml  README  memory.x  openocd.cfg
.cargo/: config
