[package]
name = "stm32f030r8-nucleo-tests"
version = "0.1.0"
authors = ["Sergey Matyukevich <geomatsi@gmail.com>"]

[dependencies]
cortex-m = "0.5.7"
cortex-m-rt = "0.6.4"
panic-semihosting = "0.5.0"
cortex-m-semihosting = "0.3.1"

[dependencies.stm32f0]
version = "0.2.3"
features = ["stm32f0x0", "rt"]
