[package]
name = "stm32f030r8-nucleo-tests"
version = "0.1.0"
authors = ["Sergey Matyukevich <geomatsi@gmail.com>"]
edition = "2018"

[dependencies]
cortex-m = "0.5.8"
cortex-m-rt = "0.6.7"
panic-semihosting = "0.5.1"
cortex-m-semihosting = "0.3.2"
nb = "0.1.1"
cortex-m-rtfm = "0.4.0"

[dependencies.stm32f0]
version = "0.5.0"
features = ["stm32f0x0", "rt"]

[dependencies.stm32f0xx-hal]
version = "0.11.0"
features = ["stm32f030x8"]
